# VendingManager

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt  utils.py
pages/: Analytics.py  Main.py  RentGum.py
storage/data/: gum_file.json  vending_data.json
